--- a/src/app/otp/otp.page.html
+++ b/src/app/otp/otp.page.html
@@ -40,7 +40,7 @@
 					</ion-item>
 			</div>
 			<ion-button expand="full" shape="round" class="btn-losns" (click)="verify()">Submit Now</ion-button>
-			<div class="warning">No email received <a href="#">Resend Code</a></div>
+			<div class="warning" >No email received <p  class="resend" (click)="resend()">Resend Code</p></div>
 			
 		</div>	
 	</div>
