--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -37,10 +37,10 @@
 			<div class="social_signup">
 				<h5>Or Sign Up With</h5>
 				<div sociallink>
-				<ion-buttons facebook>
+				<ion-buttons facebook  (click)="facebookLogin()">
 				<ion-icon name="logo-facebook"></ion-icon>
 				</ion-buttons>
-				<ion-buttons google>
+				<ion-buttons google (click)="googleLogin()">
 				<ion-icon name="logo-google"></ion-icon>
 				</ion-buttons>
 			</div>
