--- a/src/app/charitydetail/charitydetail.page.html
+++ b/src/app/charitydetail/charitydetail.page.html
@@ -7,29 +7,26 @@
 </ion-header>
 <ion-content>
 <div detailbanner>
-<img src="assets/images/paul-feeding.jpg"/>
-<h2>Feed Children Around World</h2>
+<img src="{{IMAGES_URL}}/{{charity?.image}}"/>
+<h2>{{charity?.title}}</h2>
 </div>
 <div detailcontent class="ion-padding">
 <div badge>
-<span>Children</span><span>Food Baskets</span> <span>Covid-19</span>
+<span *ngFor="let tag of tags">{{tag}}</span>
 </div>
-<h3>50,000 Meals Distributed</h3>
+<h3>{{charity?.meals}} Meals Distributed</h3>
 <h2 heading>
 Overview
 </h2>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p> <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+<p>{{charity?.description}}</p>
 <h2 heading>
 Image Gallery
 </h2>
-  <ion-slides slidetable  #slideWithNav [options]="slideOptsOne"  (ionSlideWillChange)="onSlideChangeStart($event)" (ionSlideDidChange)="onSlideChanged($event)" pager="true" class="home-slider">
-    <ion-slide  hm-slider>
-      <img src="assets/images/krishnadasHaiti.jpg" style="width:100%;"/>
-    </ion-slide>
-    <ion-slide  hm-slider>
-      <img src="assets/images/sliderimg2.png" style="width:100%;"/>
+<ion-slides slidetable  #slideWithNav [options]="slideOptsOne"  (ionSlideWillChange)="onSlideChangeStart($event)" (ionSlideDidChange)="onSlideChanged($event)" pager="true" class="home-slider" *ngIf="images?.length>0">
+    <ion-slide  hm-slider *ngFor="let image of images">
+      <img src="{{IMAGES_URL}}/{{image?.image}}" style="width:100%;"/>
     </ion-slide>
 </ion-slides>
-  <ion-button shape="round" expand="full">Give Now</ion-button>
+<ion-button shape="round" expand="full">Give Now</ion-button>
 </div>
 </ion-content>
