--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -162,3 +162,144 @@ ion-header
 		}
     }
 }
+[home-page]{
+    margin: 0 10px !important;
+    --background: #f3f3f3;
+ion-header
+	{
+	  position:absolute;
+	  ion-toolbar
+	  {--background: transparent;--border-width: 0;
+	  ion-buttons
+	  {
+	   color:var(--ion-color-white);
+	   &[mr-10]
+	   {
+	   margin-right:10px;
+	   }
+	  }
+		  ion-title{
+		  color:var(--ion-color-white);
+		  text-align:center;
+            font-style: normal;
+            font-family: 'Poppins', sans-serif !important;
+        }
+	}
+	&::after
+	{
+	display:none;
+	}
+	}
+
+    .home-slider{
+        
+    [hm-slider]{
+        --bullet-background:#dcdcdc;
+        --bullet-background-active:var(--ion-color-primary);
+        display:block;
+        text-align:left;
+        border-radius: 0px 0px 20px 20px;
+        overflow:hidden;
+        
+        img{
+		   border-radius: 0px 0px 20px 20px;
+			height: 65vh;
+			object-fit: cover;
+        }
+        .sld_cnt{
+            position:absolute;
+            left:0;
+            right:0;
+            bottom:7px;
+            top:0;
+            background:rgba(0,0,0,0.60);
+            color:var(--ion-color-white);
+            padding:25px 25px 40px 25px ;
+            display:flex;
+            align-items:flex-end;
+            border-radius:0 0 20px 20px;
+            h3{
+                font-size:16px;
+            }
+            p{
+                font-size:12px;
+                color:var(--ion-color-white);
+                margin: 5px 0px 0px;
+            }
+            ion-button{
+                font-size: 12px;
+                --padding-start: 30px;
+                --padding-end: 25px;
+                letter-spacing: 0.7px;
+                --background:var(--ion-color-primary);
+                margin: 0;
+            }
+        }
+        
+    }
+   
+}
+.home-slider .swiper-pagination {
+    --scroll-bar-background: red;
+}.donationjar{
+         padding:15px 10px  5px;
+        border-radius:10px;
+        background-color:var(--ion-color-white);
+        position:relative;
+        color:var(--ion-color-black);
+        text-align:center;
+		margin-bottom:10px;
+		[donationimg]
+		{    margin: 5px 0px;
+		img
+		{
+		 max-width: 120px;
+		}
+		}
+        h3{
+            margin: 0;
+            font-weight: 600;
+            display: inline-block;
+            font-size:18px;
+            span{
+                position:relative;
+				z-index:1;
+                &:after{
+                    content: "";
+                    height: 4px;
+                    width: 100%;
+                    background: var(--ion-color-softgreen);
+					/*opacity:.5;*/
+                    display: inline-block;
+                    position: absolute;
+                    bottom: 5px;
+                    left: 0;
+                    z-index: -1;
+                }
+            }
+        }
+        p{
+            color: rgba(0, 0, 0 , 0.50);
+            font-size: 13px;
+        }
+ span
+  {font-size: 14px;
+    line-height: 22px;
+    font-weight: 300;
+    color: #adadad;
+    margin-top: 10px;
+    display: block;
+    text-align: center;
+  
+  }
+		.btn-losns{
+			--background:var( --ion-color-primary);
+			margin-top: 20px;
+			--box-shadow: none;
+            min-height: 48px;
+			margin-bottom: 15px;
+			text-transform: uppercase;
+			letter-spacing: 1px;
+		}		
+    }
+}
