--- a/src/app/addamount/addamount.page.html
+++ b/src/app/addamount/addamount.page.html
@@ -11,12 +11,17 @@
 <div amountimg class="ion-text-center">
 <img src="assets/images/mappic6.jpg"/>
 <p>Please enter amount that you would like to donate. Miniumum donation amount is 25 cents.</p>
+<p style="color:#1e1e1e;font-weight:500;">{{charity?.title}}</p>
 </div>
 <div formfield>
 				<label>Your Amount</label>
 				<ion-item lines="none" class="fls"> 
-					<ion-input placeholder="Enter Your Amount" ></ion-input>
+					<ion-input placeholder="Enter Your Amount" id="amount" (keyup)="search_keyword($event);"></ion-input>
 				</ion-item>
+				<p style="padding-top: 5px;
+    margin: 0px;
+    font-size: 12px;
+    padding-left: 12px;"><span class="no_meals">0</span> meals</p>
 </div>
-<ion-button  expand="full" shape="round" class="btn-losns">Confirm</ion-button>
+<ion-button  expand="full" shape="round" class="btn-losns" (click)="confirm();">Confirm</ion-button>
 </ion-content>
