--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -42,12 +42,12 @@ Your Donations
 		<p *ngIf="donationlist?.length==0">No Record Found..!</p>
 		<ion-item lines="none"  *ngFor="let don of donationlist">
 		<ion-thumbnail>
-		<img src="assets/images/mappic1.jpg"/>
+		<img src="{{IMAGES_URL}}/{{don?.image}}"/>
 		</ion-thumbnail>
 		<ion-label>
-		<h3>Help children in India</h3>
-		<p><b>25 Cents</b> giving to feed childen in india</p>
-		<ion-note><ion-icon name="calendar-outline"></ion-icon> 12 Aug 2020</ion-note>
+		<h3>{{don?.title}}</h3>
+		<p><b>{{don?.amount}} Cents</b> giving to {{don?.title}}</p>
+		<ion-note><ion-icon name="calendar-outline"></ion-icon> {{don?.donated_at | date : 'd MMM yyyy'}}</ion-note>
 		</ion-label>
 		</ion-item>
 	</div>
