--- a/src/app/thetable/thetable.page.html
+++ b/src/app/thetable/thetable.page.html
@@ -8,14 +8,14 @@
   </ion-header>
 
 <ion-content>
-  <ion-slides slidetable  #slideWithNav [options]="slideOptsOne"  (ionSlideWillChange)="onSlideChangeStart($event)" (ionSlideDidChange)="onSlideChanged($event)" pager="true" class="home-slider">
+  <ion-slides slidetable  #slideWithNav [options]="slideOptsOne"  (ionSlideWillChange)="onSlideChangeStart($event)" (ionSlideDidChange)="onSlideChanged($event)" pager="false" class="home-slider">
     
-    <ion-slide  hm-slider>
+    <ion-slide   hm-slider>
       <img src="assets/images/sliderimg1.jpg" style="width:100%;"/>
       <div class="sld_cnt">
       <div class="sld_cntinner">
 		<div class="logo-top-al">
-			<img src="assets/images/logo.png">
+			<img src="assets/images/images.png">
 		</div>
         <p>Start giving in a whole new way. Be matched with a children every month, in one of the World's most vulnerable countries</p>
         <ion-button routerLink="/thetabledetail"  shape="round" expand="full">Give Monthly</ion-button>
@@ -23,7 +23,7 @@
       </div>
     </ion-slide>
 	 
-    <ion-slide  hm-slider>
+    <!--ion-slide  hm-slider>
       <img src="assets/images/lady.jpg" style="width:100%;"/>
       <div class="sld_cnt">
       <div class="sld_cntinner">
@@ -34,6 +34,6 @@
         <ion-button routerLink="/thetabledetail" shape="round" expand="full">Give Monthly</ion-button>
       </div>
       </div>
-    </ion-slide>
+    </ion-slide-->
 </ion-slides>
 </ion-content>
