--- a/src/global.scss
+++ b/src/global.scss
@@ -27,9 +27,9 @@
 [content-padding]
 {
     padding:20px;
-}.swiper-slide-active [plans] {
+}/*.swiper-slide-active [plans] {
     border: 2px solid var(--ion-color-primary);
-}
+}*/
 .circleloader {
 position: absolute;
     right: 20px;
