--- a/src/app/activitydetail/activitydetail.page.html
+++ b/src/app/activitydetail/activitydetail.page.html
@@ -12,9 +12,10 @@
 
 <div detailcontent class="ion-padding">
 <h2>{{activity?.title}}</h2>
+<h5>{{activity?.meals}} meals</h5>
  <ion-note><ion-icon name="calendar-outline"></ion-icon> {{activity?.created_at | date : 'd MMM'}}</ion-note>
 <p>{{activity?.description}}</p>
 
-  <ion-button shape="round" expand="full">Give Now</ion-button>
+  <ion-button shape="round" expand="full" (click)="give(activity?.id)">Give Now</ion-button>
 </div>
 </ion-content>
