--- a/src/app/createteam/createteam.page.scss
+++ b/src/app/createteam/createteam.page.scss
@@ -107,14 +107,19 @@ ion-fab {
 {
 font-size:12px;
 color:red;
+display:block;
 }
 [btnedit] {
-   
     background: var(--ion-color-primary);
     border-radius: 50%;
     display: inline-block;
     line-height: 30px;
     border: 2px solid var(--ion-color-white);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 26px;
+    margin-left: -28px;
 
 	ion-icon
 	{color:var(--ion-color-white);
