--- a/src/app/searchteam/searchteam.page.html
+++ b/src/app/searchteam/searchteam.page.html
@@ -15,7 +15,7 @@
 		  </ion-label>
 		</ion-item>
   
-  <ion-item lines="none" *ngFor="let team of teams">
+  <ion-item lines="none" *ngFor="let team of teams" routerLink="/teamdetail/{{team?.id}}">
 		 <ion-thumbnail>
 		 <img src="{{IMAGES_URL}}/{{team?.image}}"/>
 		 </ion-thumbnail>
@@ -23,7 +23,7 @@
 		 <h2>{{team?.name}}</h2>
 		 <p><span><ion-icon name="heart"></ion-icon>{{team?.meals}}</span> <span><ion-icon name="people"></ion-icon>{{team?.joins}}</span></p>
 		 </ion-label>
-		 <ion-icon name="chevron-forward-outline" slot="end" routerLink="/teamdetail/{{team?.id}}"></ion-icon>
+		 <ion-icon name="chevron-forward-outline" slot="end" ></ion-icon>
 		</ion-item>
 				
 		<ion-fab routerLink="/createteam" vertical="bottom" horizontal="end" edge size="small" slot="fixed">
