--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -17,19 +17,17 @@ Payment Details
 </h2>
 <p>You Saved Payment Methods</p>
 
-<div *ngFor="let pay of paymentlist">
+<div *ngFor="let pay of paymentlist" class="paymentlist">
 <p>{{pay?.card_number}} {{pay?.card_holder_name}}</p>
+<div>
 <ion-buttons   edit-btn routerLink="/edit_payment/{{pay?.id}}">
 <ion-icon name="pencil-outline"></ion-icon>
 </ion-buttons>
-
-<ion-buttons   edit-btn (click)="delete(pay?.id)">
+<ion-buttons  delete-btn (click)="delete(pay?.id)">
 <ion-icon name="trash-outline"></ion-icon>
 </ion-buttons>
-
-
 </div>
-
+</div>
 <ion-button  expand="full" shape="round" routerLink="/addpayment">Add Payment Method</ion-button>
 </div>
 <div settinglist>
