--- a/src/app/teamdetail/teamdetail.page.html
+++ b/src/app/teamdetail/teamdetail.page.html
@@ -50,7 +50,7 @@
 Detail
 </h2>
 <p>{{team?.description}} </p>
- <ion-button shape="round" expand="full" *ngIf="userid!=team?.userid && joined?.indexOf(team?.id)>=0" >Give for this team</ion-button>
+ <ion-button shape="round" expand="full" *ngIf="userid!=team?.userid && joined?.indexOf(team?.id)>=0"(click)="give(team?.id)" >Give for this team</ion-button>
   <ion-button shape="round" expand="full" *ngIf="userid!=team?.userid && joined?.indexOf(team?.id)==-1" (click)="join_team()">Join team</ion-button>
    <ion-button shape="round" expand="full" *ngIf="userid!=team?.userid && joined?.indexOf(team?.id)>=0" (click)="leave_team()">Leave Team</ion-button>
 </div>
