--- a/src/app/customamount/customamount.page.html
+++ b/src/app/customamount/customamount.page.html
@@ -10,7 +10,7 @@
 <ion-content class="ion-padding">
 <div amountimg class="ion-text-center">
 <img src="assets/images/mappic6.jpg"/>
-<p>Please enter amount that you would like to donate. Miniumum donation amount is 100 cents.</p>
+<p>Please enter amount that you would like to donate. Miniumum donation amount is 1 dollar.</p>
 <p style="color:#1e1e1e;font-weight:500;" *ngIf="errors.indexOf(charityid)==-1">{{charity?.title}}</p>
 <p style="color:#1e1e1e;font-weight:500;" *ngIf="errors.indexOf(actid)==-1">{{act?.title}}</p>
 <p style="color:#1e1e1e;font-weight:500;" *ngIf="errors.indexOf(teamid)==-1">{{team?.name}}</p>
