--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,7 +9,7 @@
 	<div class="top-img-str"></div>
 	<div class="cont-login">		
 		<div class="logo-top-al">
-			<img src="assets/images/logo.png">
+			<img src="assets/images/logonew.png">
 		</div>
 		<div class="main-ttl">
 			<h3> Login </h3>
