--- a/src/app/charitydetail/charitydetail.page.html
+++ b/src/app/charitydetail/charitydetail.page.html
@@ -22,7 +22,7 @@ Overview
 <h2 heading>
 Image Gallery
 </h2>
-<ion-slides slidetable  #slideWithNav [options]="slideOptsOne"  (ionSlideWillChange)="onSlideChangeStart($event)" (ionSlideDidChange)="onSlideChanged($event)" pager="true" class="home-slider" *ngIf="images?.length>0">
+<ion-slides slidetable  #slideWithNav [options]="slideOptsOne"   pager="true" class="home-slider" *ngIf="images?.length>0">
     <ion-slide  hm-slider *ngFor="let image of images">
       <img src="{{IMAGES_URL}}/{{image?.image}}" style="width:100%;"/>
     </ion-slide>
