--- a/src/app/tribes/tribes.page.html
+++ b/src/app/tribes/tribes.page.html
@@ -20,7 +20,7 @@
 		   Testimonials
 		</ion-segment-button>
 		<ion-segment-button value="beneficiaries" *ngIf="userdetails?.type==2">
-		   Beneficiaries
+		   Testimonials
 		</ion-segment-button>
 		<ion-segment-button value="activity">
 		   Activites
