--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -107,6 +107,7 @@ margin-top: 0px;
 position:relative;
 z-index: 1;
 font-weight:600;
+margin-bottom: 20px;
 &:after {
     /*opacity: .5;*/
     content: '';
@@ -154,6 +155,7 @@ font-size: 13px;
     font-weight: 500;
     margin-bottom: 2px;
     text-transform: capitalize;
+    padding-right: 30px;
 	}
 	p
 	{color:  #9d9d9d;
@@ -162,6 +164,7 @@ font-size: 13px;
     white-space: normal;
     line-height: 16px;
     margin: 0 0px 5px;
+    padding-right: 30px;
 	b {
     color: var(--ion-color-primary);
 }
@@ -179,6 +182,16 @@ font-size: 13px;
 		}
 	}
 	}
+  span.dontns_share {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    font-size: 20px;
+    color: rgba(var(--ion-text-color-rgb, 0, 0, 0), 0.54);
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+}
   }
   }
 	[certficate-sec]
