--- a/src/app/charitydetail/charitydetail.page.scss
+++ b/src/app/charitydetail/charitydetail.page.scss
@@ -55,6 +55,8 @@ h2
     margin: 0 auto;
     text-align: center;
     font-size: 20px;
+    padding: 0 10px;
+    line-height: 32px;
 }
 }
 [detailcontent]
