--- a/src/app/createteam/createteam.page.scss
+++ b/src/app/createteam/createteam.page.scss
@@ -53,11 +53,23 @@ ion-content
 				color: #222;
 			}
 		}
+
 text-align:Center;
+.profile_thumbnail_wrpr {
+	span[error] {
+		text-align: center;
+		margin-top: 0;
+	}
+}
 img
 {
-    max-width: 120px;
+	box-shadow: 0px 0px 10px rgb(0 0 0 / 25%);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 2px solid var(--ion-color-white);
     margin: 0 auto;
+    text-align: center;
 }
 [teamcont]
 	{--padding-start: 10px;
@@ -105,10 +117,14 @@ ion-fab {
 }
 [error]
 {
-font-size:12px;
-color:red;
-display:block;
+	font-size: 12px;
+    color: red;
+    display: block;
+    text-align: left;
+    margin-top: 6px;
 }
+
+
 [btnedit] {
     background: var(--ion-color-primary);
     border-radius: 50%;
