--- a/src/app/jointeamconfirm/jointeamconfirm.page.html
+++ b/src/app/jointeamconfirm/jointeamconfirm.page.html
@@ -2,9 +2,11 @@
 
 <ion-content>
 	<div class="popupconfirm">
-		<p>Give for a team </p>
+		<h4>Give for a team </h4>
 		<p>By Joining a team , all of your future donations will be on behalf of this team. You can switch or leave a team at any time.</p>
-		<ion-button shape="round" expand="full" (click)="cancel()">Cancel</ion-button>
-		<ion-button shape="round" expand="full" (click)="join()" >Join</ion-button>
+		<div class="popup_actionwrap">
+			<ion-button shape="round" expand="full" (click)="cancel()">Cancel</ion-button>
+			<ion-button shape="round" expand="full" (click)="join()" >Join</ion-button>
+		</div>
 	</div>
 </ion-content>
