--- a/src/app/jointeamconfirm/jointeamconfirm.page.scss
+++ b/src/app/jointeamconfirm/jointeamconfirm.page.scss
@@ -1,10 +1,24 @@
 .jointeamconfirm {
-    width: 100%;
-    height: 100%;
-    max-width: 325px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
+    height: auto;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: #ffffff;
+    border-radius: 15px;
+}
+
+
+ion-content{
+    --background: #0000006e;
+    .popupconfirm p {
+        text-align: center;
+    }
+    .popup_actionwrap {
+        display: flex;
+        ion-button {
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+    }
 }
