--- a/src/app/searchteam/searchteam.page.html
+++ b/src/app/searchteam/searchteam.page.html
@@ -15,7 +15,7 @@
 		  </ion-label>
 		</ion-item>
   
-  <ion-item lines="none" *ngFor="let team of teams" routerLink="/teamdetail/{{team?.id}}">
+  <ion-item lines="none" *ngFor="let team of teams" routerLink="/teamdetail/{{team?.id}}" detail="false">
 		 <ion-thumbnail>
 		 <img src="{{IMAGES_URL}}/{{team?.image}}"/>
 		 </ion-thumbnail>
