--- a/src/app/charitydetail/charitydetail.page.html
+++ b/src/app/charitydetail/charitydetail.page.html
@@ -12,21 +12,21 @@
 </div>
 <div detailcontent class="ion-padding">
 <div badge>
-<span *ngFor="let tag of tags">{{tag}}</span>
+<!--span *ngFor="let tag of tags">{{tag}}</span-->
 </div>
 <h3>{{charity?.meals}} Meals Distributed</h3>
 <h2 heading>
 Overview
 </h2>
 <p>{{charity?.description}}</p>
-<h2 heading>
+<!--h2 heading>
 Image Gallery
-</h2>
-<ion-slides slidetable  #slideWithNav [options]="slideOptsOne"   pager="true" class="home-slider" *ngIf="images?.length>0">
+</h2-->
+<!--ion-slides slidetable  #slideWithNav [options]="slideOptsOne"   pager="true" class="home-slider" *ngIf="images?.length>0">
     <ion-slide  hm-slider *ngFor="let image of images">
       <img src="{{IMAGES_URL}}/{{image?.image}}" style="width:100%;"/>
     </ion-slide>
-</ion-slides>
+</ion-slides-->
 <ion-button shape="round" expand="full" (click)="give(charity?.id)">Give Now</ion-button>
 </div>
 </ion-content>
