--- a/src/app/showcards/showcards.page.html
+++ b/src/app/showcards/showcards.page.html
@@ -10,11 +10,10 @@
 <ion-content>
 <div amountimg class="ion-text-center">
 <!--p>Added Cards</p-->
-
+{{cardid}}
 <p *ngIf="cards?.length==0">No cards found</p>
-<ion-radio-group value=""class="radiobox">
+<ion-radio-group class="radiobox    ionradioch" [(ngModel)]="cardid" name="cardid">
     <ion-item lines="none" *ngFor="let pay of cards">
-		
 					
       <ion-label>{{pay?.card_number}}</ion-label>
       <ion-radio value="{{pay?.id}}"  (click)="cardno(pay?.id)" class="radiobox"></ion-radio>
