--- a/src/app/addpayment/addpayment.page.html
+++ b/src/app/addpayment/addpayment.page.html
@@ -19,7 +19,7 @@
 <div formfield>
 				<label>Card Number</label>
 				<ion-item lines="none" class="fls"> 
-					<ion-input placeholder="Enter Card Number" [(ngModel)]="card_number" name="card_number"></ion-input>
+					<ion-input placeholder="Enter Card Number" [maxlength]="16" [(ngModel)]="card_number" name="card_number"></ion-input>
 				</ion-item>
 				<span error *ngIf="errors.indexOf(card_number) >= 0 && is_submit_payment == true">Please enter card number</span>
 </div>
